<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".BuyMed.BuyMedicineBookActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HealthEase"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textViewBMBPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Fill Details for Booking"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/editTextBMBFullName"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMBPackageName"
        app:layout_constraintVertical_bias="0.183" />


    <EditText
        android:id="@+id/editTextBMBAddress"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMBPackageName"
        app:layout_constraintVertical_bias="0.289" />


    <EditText
        android:id="@+id/editTextBMBPincode"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_marginBottom="320dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Pincode"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBMBFullName"
        app:layout_constraintVertical_bias="0.887" />

    <EditText
        android:id="@+id/editTextBMBContactNumber"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_marginBottom="268dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Contact Number"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBMBBook"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginBottom="156dp"
        android:text="Book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.561" />

</androidx.constraintlayout.widget.ConstraintLayout>