<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".BuyMed.BuyMedicineActivity">



    <TextView
        android:id="@+id/textViewBMName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24x7 Healthcare"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/textViewBMTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deliver Location : Dhaka"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMName"
        app:layout_constraintVertical_bias="0.019999999" />

    <ListView
        android:id="@+id/listViewBM"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBMBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="509dp"
        android:layout_marginEnd="44dp"
        android:text="BACK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toEndOf="@+id/buttonBMGoToCart"
        app:layout_constraintTop_toTopOf="@+id/listViewBM" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="179dp"
        android:text="Lab Test and Packages"
        android:textColor="@color/yellowLight"
        app:layout_constraintBottom_toTopOf="@+id/listViewBM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMTitle"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBMGoToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="148dp"
        android:text="Go to Cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonBMBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewBM" />

</androidx.constraintlayout.widget.ConstraintLayout>